# SkyUI-Community

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  CMakePresets.json  README.md  Version.cmake
cmake/: ActionScript.cmake  AssembleScripts.cmake  BSArchive.cmake  Deploy.cmake  ImportToSWF.cmake  MergeSWF.py  Package.cmake  Papyrus.cmake  PapyrusCompile.cmake  PapyrusCustom.cmake  PatchCreationClub.py  SWFSources.cmake  SWFXMLPatch.cmake
data/: SkyUI_SE.esp
data/interface/: bartermenu.swf  bethesdanetlogin.swf  book.swf  bookmenu.swf  console.swf  containermenu.swf  craftingmenu.swf  creationclubmenu.swf  creditsmenu.swf  cursormenu.swf  dialoguemenu.swf  fadermenu.swf  favoritesmenu.swf  giftmenu.swf  hudmenu.swf  inventorymenu.swf  kinectmenu.swf  levelupmenu.swf  loadingmenu.swf  loadwaitspinner.swf  lockpickingmenu.swf  magicmenu.swf  map.swf  messagebox.swf  modmanager.swf  quest_journal.swf  racesex_menu.swf  safezone.swf  sleepwaitmenu.swf  startmenu.swf  statsmenu.swf  streaminginstall.swf  titles.swf  trainingmenu.swf  tutorialmenu.swf  tweenmenu.swf  widgetoverlay.swf
data/interface/exported/skyui/: widgetloader.swf
data/interface/skyui/: bottombar.swf  config.txt  configpanel.swf  inventorylists.swf  itemcard.swf  skyui_splash.swf
data/interface/translations/: skyui_se_chinese.txt  skyui_se_czech.txt  skyui_se_english.txt  skyui_se_french.txt  skyui_se_german.txt  skyui_se_italian.txt  skyui_se_japanese.txt  skyui_se_polish.txt  skyui_se_russian.txt  skyui_se_spanish.txt
interface/skyui/: bottombar.swf  itemcard.swf
interface/translations/: skyui_se_czech.txt  skyui_se_french.txt  skyui_se_german.txt  skyui_se_italian.txt  skyui_se_japanese.txt  skyui_se_polish.txt  skyui_se_russian.txt  skyui_se_spanish.txt
patches/Chinese Simplified Patch/interface/translations/: skyui_se_english.txt
source/: swfsources.cmake
source/actionscript/Common/: MouseRotationInputCatcher.as  QuantitySlider.as  SaveLoadPanel.as
source/actionscript/Common/Components/: CrossPlatformButtons.as  DeltaMeter.as  Meter.as
source/actionscript/CraftingMenu/: CraftingDataSetter.as  CraftingIconSetter.as  CraftingListEntry.as  CraftingLists.as  CraftingMenu.as  CustomConstructDataSetter.as  IconTabList.as  IconTabListEntry.as
source/actionscript/FavoritesMenu/: FavoritesIconSetter.as  FavoritesListEntry.as  FavoritesMenu.as  FilterDataExtender.as  GroupButton.as  GroupDataExtender.as
source/actionscript/HUDWidgets/: WidgetLoader.as
source/actionscript/ItemMenus/: BarterDataSetter.as  BarterMenu.as  BottomBar.as  CategoryList.as  CategoryListEntry.as  ContainerMenu.as  GiftMenu.as  InventoryDataSetter.as  InventoryIconSetter.as  InventoryListEntry.as  InventoryLists.as  InventoryMenu.as  ItemCard.as  ItemCard2.as  ItemMenu.as  ItemcardDataExtender.as  MagicDataSetter.as  MagicIconSetter.as  MagicMenu.as
source/actionscript/MapMenu/Map/: LocalMap.as  (+5 more)
source/actionscript/ModConfigPanel/: ColorDialog.as  ConfigPanel.as  MenuDialog.as  MessageDialog.as  ModListPanel.as  MultiColumnScrollBar.as  MultiColumnScrollingList.as  OptionDialog.as  OptionsListEntry.as  ParticleEmitter.as  SkyUISplash.as  SliderDialog.as  SnowEffect.as  TextInputDialog.as
source/actionscript/PauseMenu/: InputMappingArt.as  InputMappingList.as  JournalBottomBar.as  JournalSaveLoadList.as  ObjectiveScrollingList.as  OptionsList.as  QuestCenteredList.as  Quest_Journal.as  QuestsPage.as  SaveLoadPanel.as  SettingsOptionItem.as  StatsList.as  StatsPage.as  SystemPage.as
source/actionscript/TweenMenu/: TweenMenu.as
source/actionscript/Vanilla/: AnimatedLetter.as  AnimatedSkillText.as  AutoResizeTextBacking.as  BethesdaNetLogin.as  BookBottomBar.as  BookMenu.as  BottomButtons.as  BuyNowButton.as  CCCarousel.as  CCCreditCost.as  CCHeader.as  CCListEntry.as  CCModDetails.as  CCPurchaseDialog.as  CCWallet.as  CarouselButton.as  CharacterSelectHintButtons.as  Console.as  CreationClubMenu.as  CreationScreenshot.as  CreditsMenu.as  DialogCreditCost.as  DialogueCenteredList.as  DialogueMenu.as  FaderMenu.as  FilterTabs.as  FilteredList.as  HUDMenu.as  KinectMenu.as  LevelUpMenu.as  ListEntryBase.as  LoadWaitSpinner.as  LoadingMenu.as  LockpickingMenu.as  LoginCheckbox.as  MainSaveLoadList.as  MessageBox.as  Messages.as  ModAccountSettingsList.as  ModCategoryList.as  (+26 more)
source/actionscript/swf/: bartermenu.cmake  containermenu.cmake  craftingmenu.cmake  favoritesmenu.cmake  giftmenu.cmake  inventorymenu.cmake  magicmenu.cmake  map.cmake  quest_journal.cmake  tweenmenu.cmake
source/scripts/: SKI_ConfigManager.psc  SKI_ConfigMenu.psc  SKI_FavoritesManager.psc  SKI_Main.psc  SKI_SearchHistory.psc  ski_configmenu.psc
source/swf/: bethesdanetlogin.cmake  bethesdanetlogin.xml  book.cmake  book.xml  bookmenu.cmake  bookmenu.xml  console.cmake  console.xml  containermenu.cmake  craftingmenu.cmake  creationclubmenu.cmake  creditsmenu.cmake  creditsmenu.xml  cursormenu.xml  dialoguemenu.cmake  dialoguemenu.xml  fadermenu.cmake  fadermenu.xml  favoritesmenu.cmake  hudmenu.cmake  inventorymenu.cmake  kinectmenu.cmake  levelupmenu.cmake  levelupmenu.xml  loadingmenu.cmake  loadingmenu.xml  loadwaitspinner.cmake  loadwaitspinner.xml  lockpickingmenu.cmake  lockpickingmenu.xml  magicmenu.xml  map.cmake  map.xml  messagebox.cmake  messagebox.xml  modmanager.cmake  modmanager.xml  quest_journal.cmake  racesex_menu.cmake  racesex_menu.xml  (+19 more)
source/swf/skyui/: bottombar.cmake  bottombar.xml  buttonart.xml  configpanel.xml  icons_category_celtic.xml  icons_category_curved.xml  icons_category_psychosteve.xml  icons_category_straight.xml  icons_item_psychosteve.xml  inventorylists.cmake  inventorylists.xml  itemcard.cmake  itemcard.xml  mapfinderpanel.xml  mapmarkerart.xml  skyui_splash.cmake  skyui_splash.xml
swf_xml/: bartermenu.xml  containermenu.xml  craftingmenu.xml  favoritesmenu.xml  giftmenu.xml  inventorymenu.xml  magicmenu.xml  map.xml  quest_journal.xml
tools/: fps_whitelist.json  hudmenu_60fps_patcher.py  verify_60fps.py  xml_60fps_patcher.py  xml_fps_patcher.py
workingfolder/: icons_item_psychosteve_merged.swf
(+95 files in other folders)
